# send_mail

./: README.md  flake.nix  pyproject.toml  send-mail.nix  send_mail.json.example  send_mail.py  setup.py  test.sh
