[tool.poetry]
name = "send-mail"
version = "1.0.0"
description = "simple command-line for sending an email with remote auth"
authors = ["James T <j@elk.gg>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
send-mail = "send_mail:command_line"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
